--- a/www/default/index.html
+++ b/www/default/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>Home - Webserv</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
   <body>
     <h1 class="title">Welcome to 42 Webserv!</h1>
+
+    <p>Kusjes van Vincentje en Eefje <3 </p>
   </body>
 </html>
