--- a/www/default/error/400.html
+++ b/www/default/error/400.html
@@ -4,7 +4,7 @@
         <title>400 Bad Request</title>
     </head>
     <body>
-        <h1>400 Bad Request</h1>
-        <p>Invalid request.</p>
+        <h1 align="center">400 Bad Request</h1>
+        <p align="center">Invalid request.</p>
     </body>
 </html>
