--- a/www/default/error/404.html
+++ b/www/default/error/404.html
@@ -4,7 +4,7 @@
         <title>404 Not Found</title>
     </head>
     <body>
-        <h1>404 Not Found</h1>
-        <p>The page you are looking for could not be found.</p>
+        <h1 align="center">404 Not Found</h1>
+        <p align="center">The page you are looking for could not be found.</p>
     </body>
 </html>
