Add style for error pages

--- a/www/default/error.html
+++ b/www/default/error.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>400 Bad Request</title>
+    <title>{{CODE_STR}}</title>
     <style>
         body {
             display: flex;
@@ -46,8 +46,8 @@
     </style>
 </head>
 <body>
-    <h1>400 Bad Request</h1>
-    <p>Invalid request.</p>
+    <h1>{{STATUS_CODE}}</h1>
+    <p>Oops! Something went wrong.</p>
     <a href="/" class="button">Go Back to Home Page</a>
 </body>
 </html>
