--- a/www/default/error/404.html
+++ b/www/default/error/404.html
@@ -1,10 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>404 Not Found</title>
-    </head>
-    <body>
-        <h1 align="center">404 Not Found</h1>
-        <p align="center">The page you are looking for could not be found.</p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
+            background: radial-gradient(circle, #1e1e2f, #15151f);
+            font-family: 'Courier New', Courier, monospace;
+            color: #00ffcc;
+        }
+        h1 {
+            color: #ff66cc;
+            text-shadow: 0 0 5px #ff66cc, 0 0 10px #ff66cc, 0 0 15px #ff66cc;
+            text-align: center;
+        }
+        p {
+            color: #cccccc;
+            text-align: center;
+            font-size: 1.2em;
+        }
+        .button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #00ffcc;
+            background-color: #333;
+            border: 1px solid #00ffcc;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            text-align: center;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #00ffcc;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>404 Not Found</h1>
+    <p>The page you are looking for could not be found.</p>
+    <a href="/" class="button">Go Back to Home Page</a>
+</body>
 </html>
